appId: com.android.settings
---
- launchApp
- startRecording: "install-esim"
- tapOn:
    text: Network and Internet
- scrollUntilVisible:
    element:
      text: SIMs
    direction: DOWN
- tapOn:
    text: SIMs
- scrollUntilVisible:
    element:
      text: Add SIM
- tapOn:
    text: Add SIM
- tapOn:
    text: Set up an eSIM
- assertVisible:
    text: Enter activation code
- tapOn:
    text: Enter activation code
- tapOn:
    text: Code
- inputText: ${ACTIVATION_CODE}
- tapOn:
    text: Next
- assertNotVisible:
    text: Can't set up eSIM
- tapOn:
    text: Set up
- retry:
    maxRetries: "5"
    commands:
      - extendedWaitUntil:
          visible:
            text: Activate your eSIM
- pressKey: BACK
- waitForAnimationToEnd
- pressKey: BACK
- waitForAnimationToEnd
- pressKey: BACK
- waitForAnimationToEnd
